# auth-service

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  sql.sh  start.sh
auth_service/: app.py  db.py  model.py
